--- a/api/package.json
+++ b/api/package.json
@@ -28,7 +28,10 @@
     "prisma": "^5.15.1",
     "ts-node": "^10.9.2",
     "tsx": "^4.15.7",
-    "typescript": "^5.5.2"
+    "typescript": "^5.5.2",
+    "vitest": "^0.34.6",
+    "jest": "^29.7.0",
+    "vitest-mock-extended": "^1.3.1"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
