--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch index.ts",
-    "test": "vitest"
+    "test": "vitest",
+    "coverage": "vitest run --coverage  --dir ./src/tests/ -r ./src/domains/ --coverage.reportsDirectory ./../../coverage --coverage.all=false --coverage.exclude='**/controllers/**'"
   },
   "dependencies": {
     "@prisma/client": "^5.15.1",
@@ -25,10 +26,13 @@
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.7",
+    "@vitest/coverage-v8": "^1.6.0",
     "prisma": "^5.15.1",
     "ts-node": "^10.9.2",
     "tsx": "^4.15.7",
-    "typescript": "^5.5.2"
+    "typescript": "^5.5.2",
+    "vitest": "^1.6.0",
+    "vitest-mock-extended": "^1.3.1"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
