--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch index.ts",
-    "test": "vitest"
+    "test": "vitest",
+    "coverage": "vitest --coverage"
   },
   "dependencies": {
     "@prisma/client": "^5.15.1",
@@ -25,12 +26,13 @@
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.7",
+    "@vitest/coverage-istanbul": "^1.6.0",
+    "jest": "^29.7.0",
     "prisma": "^5.15.1",
     "ts-node": "^10.9.2",
     "tsx": "^4.15.7",
     "typescript": "^5.5.2",
-    "vitest": "^0.34.6",
-    "jest": "^29.7.0",
+    "vitest": "^1.6.0",
     "vitest-mock-extended": "^1.3.1"
   },
   "prisma": {
